--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,52 @@
-torch~=2.6.0
-tqdm~=4.67.1
-tokenizers~=0.20.1
-datasets~=3.3.2
+absl-py==2.1.0
+aiohappyeyeballs==2.4.6
+aiohttp==3.11.13
+aiosignal==1.3.2
+async-timeout==5.0.1
+attrs==25.1.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+datasets==3.3.2
+dill==0.3.8
+filelock==3.17.0
+frozenlist==1.5.0
+fsspec==2024.12.0
+grpcio==1.70.0
+huggingface-hub==0.29.1
+idna==3.10
+importlib_metadata==8.6.1
+Jinja2==3.1.5
+Markdown==3.7
+MarkupSafe==3.0.2
+mpmath==1.3.0
+multidict==6.1.0
+multiprocess==0.70.16
+networkx==3.2.1
+numpy==2.0.2
+packaging==24.2
+pandas==2.2.3
+pip==25.0.1
+propcache==0.3.0
+protobuf==5.29.3
+pyarrow==19.0.1
+python-dateutil==2.9.0.post0
+pytz==2025.1
+PyYAML==6.0.2
+requests==2.32.3
+setuptools==68.2.0
+six==1.17.0
+sympy==1.13.1
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
+tokenizers==0.21.0
+torch==2.6.0
+tqdm==4.67.1
+typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==1.26.20
+Werkzeug==3.1.3
+wheel==0.41.2
+xxhash==3.5.0
+yarl==1.18.3
+zipp==3.21.0
+zstandard==0.23.0
